@@ -3,6 +3,8 @@
 	* bin/cygbuild.sh: (CygbuildCmdInstallCheckShellFiles):
 	shorten message by using relative path. Display symlink destination.
 	Correct for-loop to check only files.
+	(CygbuildCmdInstallCheckSetupHint): Correct variable name 'retval'.
+	Added 'category:' line check.
 
 2007-09-30  Jari Aalto  <jari.aalto@cante.net>
 
